# Dual-Federated-Catalog-Solid-EDC-

./: .dockerignore  .gitignore  CREDITS.md  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yaml  pyproject.toml
config/: solid-registry-contract.yaml
core/: __init__.py  app.py  config.py
core/interfaces/: __init__.py  discovery.py  ingest.py  registry.py  store.py  validation.py
core/shared/: __init__.py  dcat_serialize.py  fuseki.py  rdf.py  shacl_validate.py
core/shared/shapes/: sdcat-shape.ttl
data/examples/edc/: README.md
data/examples/solid/: README.md  catalog-invalid.ttl  catalog-missing-distribution.ttl  catalog-valid.jsonld  catalog-valid.ttl
docs/: INTEGRATION_TEST.md  SOLID_MODE.md  solid-registry-contract.md
docs/img/: README.md
modes/: __init__.py
modes/edc/: __init__.py  discovery.py  ingest.py  registry.py  store.py
modes/solid/: __init__.py  auth.py  discovery.py  ingest.py  registry.py  registry_contract.py  store.py
tests/: __init__.py  fixtures.py  test_core_app.py  test_core_no_mode_imports.py  test_edc_stub.py  test_mode_switch.py  test_shared_fuseki.py  test_shared_shacl.py  test_solid_auth.py  test_solid_pipeline.py  test_solid_registry.py  test_solid_registry_contract.py  test_ui_static.py
tests/data/solid-registry/: custom-predicate-member.ttl  custom-predicate-registry.ttl  member-resource.ttl  registry-container.ttl
ui/: app.js  index.html  styles.css
