[project]
name = "federated-catalog"
version = "0.1.0"
description = "Push-based dual-substrate federated catalog for Solid and EDC"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2",
  "uvicorn[standard]>=0.30",
  "rdflib>=7",
  "pyshacl>=0.26",
  "httpx>=0.27",
  "pyjwt[crypto]>=2.8",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "modes*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
